--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smolt",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A smol and simple JavaScript template engine for personal projects.",
   "type": "module",
   "main": "dist/index.js",
@@ -12,7 +12,7 @@
     "watch": "npx tsc --watch",
     "test": "npx mocha"
   },
-  "keywords": [],
+  "keywords": ["template"],
   "author": "Jimin Park",
   "license": "MIT",
   "repository": {
