--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "watch": "npx tsc --watch",
     "test": "npx mocha"
   },
-  "keywords": ["template"],
+  "keywords": [
+    "template"
+  ],
   "author": "Jimin Park",
   "license": "MIT",
   "repository": {
@@ -24,10 +26,10 @@
   },
   "homepage": "https://github.com/123jimin/smolt",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
-    "chai": "^5.1.1",
-    "mocha": "^10.4.0",
-    "typescript": "^5.4.5"
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "chai": "^5.2.0",
+    "mocha": "^11.1.0",
+    "typescript": "^5.8.2"
   }
 }
